# skill-atlas

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
doc/: modules.md  registry.md
scripts/: gen-icons.mjs
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_skill_description_fields.sql  003_quest_active.sql  004_skill_materials.sql  005_skill_pause.sql
src-tauri/src/: lib.rs  main.rs  server.rs
src/components/quest/: ActiveQuestCard.tsx  QuestDeck.tsx  QuestItem.tsx  QuestList.tsx
src/components/skill/: LevelBadge.tsx  SkillCard.tsx  XpBar.tsx
src/components/ui/: ConfettiEffect.tsx  ImportBackupModal.tsx  JsonImportModal.tsx  Layout.tsx  LibraryBrowser.tsx  Modal.tsx  ResourceLink.tsx  Toaster.tsx
src/data/: skillLibrary.ts
src/lib/: backup.ts  db.ts  library.ts  operations.ts  system.ts  xpCurve.ts
src/pages/: Dashboard.tsx  NewSkill.tsx  Resources.tsx  SkillDetail.tsx
src/store/: useSettingsStore.ts  useSkillStore.ts  useThemeStore.ts  useToastStore.ts
