[package]
name = "skill-atlas"
version = "0.1.0"
description = "Skill Atlas - gamified skill tracking"
authors = []
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "skill_atlas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }

[features]
local-server = ["axum", "tokio", "rusqlite", "tower-http"]
default = ["local-server"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
